fixed the table's break in the modal

--- a/src/app/order-list/details-modal/details-modal.component.css
+++ b/src/app/order-list/details-modal/details-modal.component.css
@@ -20,11 +20,3 @@ table > thead {
 .btn {
     color: darkred;
 }
-
-@media only screen and (max-width: 991px) {
-    
-    table {
-        display: block;
-        overflow-x: scroll;
-    }
-}
